--- a/src/sass/_attribution.scss
+++ b/src/sass/_attribution.scss
@@ -1,6 +1,6 @@
 .attribution {
   @extend %flexbox;
-  padding: 2rem 0;
+  padding: 4rem 0;
   font-size: 1.1rem;
   text-align: center;
   color: $Light-Grayish-Blue;
