--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -52,6 +52,6 @@ body {
   flex-direction: column;
 }
 
-.filters-desktop {
+.filters--desktop {
   display: none;
 }
