--- a/src/sass/_lightTheme.scss
+++ b/src/sass/_lightTheme.scss
@@ -5,7 +5,8 @@
   background-size: contain;
 }
 
-.light .main {
+.light .main,
+.light .filters--mobile {
   box-shadow: 0 2rem 1rem rgba(29, 29, 29, 0.1);
 }
 
