--- a/src/sass/_manage.scss
+++ b/src/sass/_manage.scss
@@ -1,9 +1,9 @@
 .stats {
+  position: relative;
   @extend %container;
   @extend %flexbox;
   justify-content: space-around;
   color: $Dark-Grayish-Blue;
-  border-radius: 0 0 0.5rem 0.5rem;
 }
 
 .filters {
@@ -13,3 +13,11 @@
   gap: 2rem;
   border-radius: 0.5rem;
 }
+
+.filters--mobile {
+  position: absolute;
+  transform: translateY(100%);
+  border-radius: 0 0 0.5rem 0.5rem;
+}
+
+// .filters-mobile
