--- a/src/sass/_mediaQueries.scss
+++ b/src/sass/_mediaQueries.scss
@@ -31,13 +31,13 @@
     margin-top: 10rem;
   }
 
-  .filters-desktop {
+  .filters--desktop {
     display: flex;
     width: auto;
     margin: 0;
   }
 
-  .filters-mobile {
+  .filters--mobile {
     display: none;
   }
 }
